Fix long name overflow

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -182,6 +182,11 @@
 
 .finish-row > p:first-child {
 	float: left;
+    width: 155px;
+    white-space: nowrap;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .finish-row > p:last-child {
